--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#">SOBRE</a></li>
             </ul>
         </menu>
-        <h1>Parisotto - Etec</h1>
+        <h1>Felipe, Job</h1>
     </header>
     <main>
         <div>Primeira div</div>
